--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
 html, body{
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+#main{
+    overflow: hidden;
 }
 
 #page1{
@@ -92,19 +97,36 @@ nav>h4{
     font-family: "Vonca";
 }
 
-.fixed{
+.navbar {
+    position: absolute;
+    /* Starts as absolute */
+    top: 100vh;
+    left: 0;
+    width: 100%;
+    background: white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
-    top: 0px;
-    z-index: 10;
+    padding: 1vw 2vw;
+    z-index: 100;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
 }
 
-.fixed h3{
+/* Sticky Navbar Class */
+.fixed-navbar {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    transform: translateY(0) !important;
+    opacity: 1;
+}
+.navbar h3{
     font-size: 2vw;
-    position: sticky;
-    top: 0px;
+    font-family: "Vonca";
 }
 
 .menu{
@@ -112,12 +134,26 @@ nav>h4{
     align-items: center;
     justify-content: space-between;
     padding-left: 2vw;
+    gap: 2vw;
 }
 
 .menu h4{
     font-family: "Vonca";
-    padding-left: 1vw;
+    padding-left: .5vw;
     font-size: 1.2vw;
+    cursor: pointer;
+    position: relative;
+    font-weight: 500;
+}
+
+.underline-effect {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    background-color: black;
+    width: 0%;
+    transition: width 0.4s ease-in-out;
 }
 
 #page1-content>h5{
