--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ html, body{
     height: 100vh;
     width: 100%;
     position: relative;
+    background: #222;
 }
 
 #cursor{
@@ -44,7 +45,7 @@ html, body{
     background-blend-mode: screen;
     border-radius: 15% 60%;
     position: fixed;
-    z-index: 9;
+    z-index: 99;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,18 +57,38 @@ html, body{
     font-family: "Vonca";
 }
 
+.loader{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    color: #fff;
+    background-color: #0d0d0d;
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .6vw;
+}
+
+.loader h3{
+    font-family: "Vonca";
+    font-weight: 400;
+}
+
 #page1 video{
     height: 100%;
     width: 100%;
     object-fit: cover;
     position: absolute;
+    filter: brightness(0.7);
 }
 
 #page1-content{
     height: 100%;
     width: 100%;
     position: relative;
-    z-index: 10;
+    z-index: 2;
     color: #fff;
     display: flex;
     align-items: center;
@@ -159,17 +180,21 @@ nav>h4{
 #page1-content>h5{
     font-size: 3vw;
     color: #fff;
-    mix-blend-mode: screen;
+    mix-blend-mode: difference;
     font-family: "Vonca";
+    z-index: 3;
 }
 
 #page1-content h1{
     font-family: "Cafe Lumen";
     font-size: 25vw;
     font-weight: 700;
+    mix-blend-mode: difference;
+    z-index: 3;
 }
 #page1-content h1 span{
     font-family: "Cafe Lumen";
+    display: inline-block;
 }
 
 #page2{
