--- a/style.css
+++ b/style.css
@@ -444,3 +444,60 @@ nav>h4{
     margin-right: auto;
 }
 
+.page5-bottom{
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0vh 3vw;
+}
+
+.page5-svg-block {
+    height: 120px;
+    width: 120px;
+}
+
+.page5-svg-block img{
+    height: 80px;
+    width: 80px;
+}
+
+#page6{
+    min-height: 100vh;
+    width: 100%;
+}
+
+.page6-part1{
+    height: 30vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.page6-part1 img{
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+
+.page6-p1-text-block{
+    text-align: center;
+    height: 4.3rem;
+    width: 15vw;
+    line-height: 1;
+    overflow: hidden;
+    position: absolute;
+}
+
+.page6-p1-text-block h1{
+    font-size: 4rem;
+    font-family: "Vonca";
+    font-weight: 500;
+    color: #fff;
+}
+
+
