--- a/style.css
+++ b/style.css
@@ -469,12 +469,13 @@ nav>h4{
 }
 
 .page6-part1{
-    height: 30vh;
+    height: 40vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    padding: 2vh 5vw;
 }
 
 .page6-part1 img{
@@ -482,12 +483,14 @@ nav>h4{
     width: 100%;
     z-index: -1;
     object-fit: cover;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 
 .page6-p1-text-block{
     text-align: center;
     height: 4.3rem;
-    width: 15vw;
+    width: 30vw;
     line-height: 1;
     overflow: hidden;
     position: absolute;
@@ -498,6 +501,7 @@ nav>h4{
     font-family: "Vonca";
     font-weight: 500;
     color: #fff;
+    mix-blend-mode: difference;
 }
 
 
